<resources>
    <string name="app_name" translatable="false">Kiad</string>
    <string name="login">Login</string>
    <string name="register_at_landing">Don’t have an account? <b>Sign Up</b></string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login_subtitle">Get informations on accessiblity facility at ease</string>
    <string name="register">Register</string>
    <string name="register_subtitle">Get informations on accessiblity facility at ease</string>
    <string name="name">Name</string>
    <string name="unknown_error">There is an error on our side. Try again in a moment.</string>
    <string name="search_places">Search places</string>
    <string name="input_empty">%1$s cannot be empty</string>
    <string name="email_invalid">Email is not valid</string>
    <string name="password_invalid">Password\'s length must be at least 8 characters</string>
    <string name="discover">Discover</string>
    <string name="contribute">Contribute</string>
    <string name="account">Account</string>
    <string name="read">Read</string>
    <string name="feature_not_available">Feature\'s in development. Coming soon.</string>
    <string name="search_by_facility">Search places by facilities</string>
    <string name="view_all">View All</string>
    <string name="search">Search Place</string>
    <string name="recently_viewed">Your recently viewed places</string>
    <string name="image_of_place">Image of place</string>
    <string name="placeholder" translatable="false">Placeholder</string>
    <string name="dot">dot</string>
    <string name="stair_lift">Stair Lift</string>
    <string name="lift">Lift</string>
    <string name="wheelchair_area">Wheelchair Area</string>
    <string name="sitting_toilet">Sitting Toilet</string>
    <string name="ramp">Ramp and Curb</string>
    <string name="accessible_space">Wide Space</string>
    <string name="railing">Railing</string>
    <string name="accessible_entrance">Easy Entrance</string>
    <string name="accessible_furniture">Accessible Furniture</string>
    <string name="wheelchair_service">Wheelchair Service</string>
    <string name="disabled_parking">Disabled Parking</string>
    <string name="escalator">Escalator</string>
    <string name="audio_output">Audio Output</string>
    <string name="audio_wayfinder">Audio Wayfinder</string>
    <string name="braille_button">Braille Button</string>
    <string name="guiding_blocks">Guiding Block</string>
    <string name="clear_signage">Clear Signage</string>
    <string name="braille_signage">Braille Signage</string>
    <string name="sign_language">Sign Language</string>
    <string name="display">Information Display</string>
    <string name="tty">Teletypewriter</string>
    <string name="tv_text">TV Text</string>
    <string name="audio_control">Audio Control</string>
    <string name="assistive_listening_device">Assistive Listening Devices</string>
    <string name="stair_lift_description">Wheelchair lift that makes travelling through stairs easier for wheelchair users.</string>
    <string name="lift_description">Lift for mobility impaired people who can\'t use stairs with enough space for wheelchair, stroller, and walking aid.</string>
    <string name="wheelchair_area_description">Wheelchair user dedicated area in crowded place that is separated to provide easy travels.</string>
    <string name="sitting_toilet_description">Sitting toilet for mobility impaired people with limited motion ability.</string>
    <string name="ramp_description">Visual Impairment Facility</string>
    <string name="accessible_space_description">Enough and wide spaces without obstacles and barriers for wheelchair, stroller, and walking aid users.</string>
    <string name="railing_description">Railing and bar in places with risk of falling like toilets and stairs for people to hold to.</string>
    <string name="accessible_entrance_description">Ease of entering a room or building without obstacles and barriers by providing wide entrance or automated door.</string>
    <string name="accessible_furniture_description">Easy-to-access and reachable furniture for people with wheelchair and impaired mobility.</string>
    <string name="wheelchair_service_description">Aid for wheelchair users like wheelchair rental and helper.</string>
    <string name="parking_description">Dedicated parking area with wide spaces for mobility impaired people.</string>
    <string name="escalator_description">A moving staircase that helps mobility impaired people moves between floors of a building.</string>
    <string name="audio_output_description">Audio output devices like earphone jack and speaker to help vision impaired people.</string>
    <string name="audio_wayfinder_description">Wayfinder and signage with audio to help vision impaired people navigate the place.</string>
    <string name="braille_button_description">Buttons and controls with braille description.</string>
    <string name="guiding_blocks_description">Guiding blocks installation to help navigate the place.</string>
    <string name="clear_signage_description">Easy-to-read and well-lit signage.</string>
    <string name="braille_signage_description">Signage with braille description.</string>
    <string name="sign_language_description">Provides sign language communication through interpreter for hearing impaired people.</string>
    <string name="display_description">Display displaying clear information in places like lift, lobby, and cashier.</string>
    <string name="tty_description">Teletypewriter device to help people with hearing impairment communicate through text.</string>
    <string name="tv_text_description">TV Text</string>
    <string name="audio_control_description">Audio Control</string>
    <string name="assistive_listening_device_description">Assistive Listening Devices</string>
    <string name="empty_recent">No recent places</string>
    <string name="checkmark">Checkmark</string>
    <string name="no_result">No result</string>
    <string name="go_back">Go back</string>
    <string name="search_by_facilities">Search facilities</string>
    <string name="mobility_facility">Mobility Facilities</string>
    <string name="select_all">Select All</string>
    <string name="visual_facility">Visual Impairment Facilities</string>
    <string name="hearing_facility">Hearing Impairment Facilities</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="btn_maps_text">Open in Maps</string>
    <string name="edit_facility_options">Edit facility options</string>
    <string name="places_around_you_with">Places around you with</string>
    <string name="facility_icon">Facility Icon</string>
    <string name="no_facilities_chosen">Choose at least one facility</string>
    <string name="distance">%1$s km</string>
    <string name="varying_reviews">Varying reviews</string>
    <string name="search_must_not_empty">Please fill the search field</string>
    <string name="see_place_detail">See place\'s details</string>
    <string name="quality">Quality</string>
    <string name="bad">Bad</string>
    <string name="good">Good</string>
    <string name="not_exist">Not exist</string>
    <string name="don_t_know">Not sure</string>
    <string name="permission_denied_warning">Permissions Needed</string>
    <string name="permissions_denied_warning_message">This app needs location permissions to work properly. Do you want to open setting and grant them?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="recently_visited_title">Places you recently visited</string>
    <string name="read_articles">Read articles</string>
    <string name="read_news">Read news</string>
    <string name="read_guidelines">Read guidelines</string>
    <string name="better_contribution_title">Make your contributions better!</string>
    <string name="better_contribution_subtitle">Read official guidelines, articles, and news about accessibility to strengthen your knowledge</string>
    <string name="add_contribution">Add Contribution</string>
    <string name="add_review">Add Review</string>
    <string name="varying_review_message">%1$s facility in this place has varying quality reviews.</string>
    <string name="location_not_found">Cannot get your location</string>
    <string name="total_contribution">%1$d total contributions</string>
    <string name="nearby_title">Places nearby</string>
    <string name="no_nearby">No places nearby</string>
    <string name="address">Address</string>
    <string name="accessibility_facilities">Accessibility Facilities</string>
    <string name="empty_mobility_facility_review">No mobility facilities review.</string>
    <string name="empty_hearing_facilities_review">No hearing impairment facilities review.</string>
    <string name="empty_visual_facilities_review">No visual impairment facilities review.</string>
    <string name="review_title">What do you think about this facility in this place?</string>
    <string name="review_done_message">Thank you for your review!</string>
    <string name="close_contribution_page">Close contribution page</string>
    <string name="logout">Logout</string>
    <string name="logging_out">Logging out</string>
    <string name="loading">Loading</string>
    <string name="your_contribution">Your contributions</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="accounting">Accounting</string>
    <string name="airport">Airport</string>
    <string name="amusement_park">Amusement Park</string>
    <string name="aquarium">Aquarium</string>
    <string name="art_gallery">Art Gallery</string>
    <string name="atm">ATM</string>
    <string name="bakery">Bakery</string>
    <string name="bank">Bank</string>
    <string name="bar">Bar</string>
    <string name="beauty_salon">Beauty Salon</string>
    <string name="bicycle_store">Bicycle Store</string>
    <string name="book_store">Book Store</string>
    <string name="bowling_alley">Bowling Alley</string>
    <string name="bus_station">Bus Station</string>
    <string name="cafe">Cafe</string>
    <string name="campground">Campground</string>
    <string name="car_dealer">Car Dealer</string>
    <string name="car_rental">Car Rental</string>
    <string name="car_repair">Car Repair</string>
    <string name="car_wash">Car Wash</string>
    <string name="casino">Casino</string>
    <string name="cemetery">Cemetery</string>
    <string name="church">Church</string>
    <string name="city_hall">City Hall</string>
    <string name="clothing_store">Clothing Store</string>
    <string name="convenience_store">Convenience Store</string>
    <string name="set_disability_types_message">This will help you get place recommendation. You can leave this empty.</string>
    <string name="save">Save</string>
    <string name="wheelchair_user">Wheelchair user</string>
    <string name="limited_walking">Limited walking ability</string>
    <string name="limited_hand">Limited hand ability</string>
    <string name="limited_physical">Limited movement ability</string>
    <string name="blindness">Blindness</string>
    <string name="low_vision">Low vision</string>
    <string name="deafness">Deafness</string>
    <string name="hard_hearing">Hard of hearing</string>
    <string name="speech_impairment">Speech impairment</string>
    <string name="reported_user">User: %1$s</string>
    <string name="reported_place">Place: %1$s</string>
    <string name="report_count">Report Count: %1$d</string>
    <string name="reported_name">Name: %1$s</string>
    <string name="reported_username">Username: %1$s</string>
    <string name="report_reason">Report reason:  %1$s</string>
    <string name="dismiss">Dismiss</string>
    <string name="reported_email">Email: %1$s</string>
    <string name="ban_user">Ban user</string>
    <string name="edit_disability">Edit Disability</string>
</resources>