<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.dialogs.ChooseDisabilityDialog">

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_disability_types_message" />

    <ScrollView
        android:id="@+id/sv_disabilities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_disabilities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/>

            <CheckBox
                android:id="@+id/cb_wheelchair_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wheelchair_user"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/cb_limited_walking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/limited_walking"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cb_wheelchair_user" />

            <CheckBox
                android:id="@+id/cb_limited_hand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/limited_hand"
                app:layout_constraintTop_toBottomOf="@id/cb_limited_walking"/>

            <CheckBox
                android:id="@+id/cb_limited_physical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/limited_physical"
                app:layout_constraintTop_toBottomOf="@+id/cb_limited_hand" />

            <CheckBox
                android:id="@+id/cb_blindness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/blindness"
                app:layout_constraintTop_toBottomOf="@+id/cb_limited_physical" />

            <CheckBox
                android:id="@+id/cb_low_vision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/low_vision"
                app:layout_constraintTop_toBottomOf="@id/cb_blindness" />

            <CheckBox
                android:id="@+id/cb_deafness"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deafness"
                app:layout_constraintTop_toBottomOf="@+id/cb_low_vision" />

            <CheckBox
                android:id="@+id/cb_hard_hearing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hard_hearing"
                app:layout_constraintTop_toBottomOf="@id/cb_deafness" />

            <CheckBox
                android:id="@+id/cb_speech_impairment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/speech_impairment"
                app:layout_constraintTop_toBottomOf="@+id/cb_hard_hearing" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>