<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.changedisability.ChangeDisabilityFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="8dp">

            <Button
                android:id="@+id/btn_back"
                style="@style/Theme.Gemastik15.Button.OutlinedButton.Icon"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/go_back"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                app:icon="@drawable/ic_baseline_arrow_back_24"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_reviews_title"
                style="@style/TextAppearance.Material3.HeadlineSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/edit_disability"
                app:layout_constraintBottom_toBottomOf="@id/btn_back"
                app:layout_constraintEnd_toStartOf="@id/btn_send"
                app:layout_constraintStart_toEndOf="@id/btn_back"
                app:layout_constraintTop_toTopOf="@id/btn_back" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_send"
                style="@style/Theme.Gemastik15.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/btn_back"
                app:layout_constraintBottom_toBottomOf="@id/btn_back"/>

            <com.google.android.material.divider.MaterialDivider
                style="@style/Theme.Gemastik15.Divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_back"
                app:layout_constraintVertical_bias="1.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/ll_disability"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_main"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_wheelchair_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wheelchair_user"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_limited_walking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/limited_walking"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_wheelchair_user" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_limited_hand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/limited_hand"
            app:layout_constraintTop_toBottomOf="@id/cb_limited_walking"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_limited_physical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/limited_physical"
            app:layout_constraintTop_toBottomOf="@+id/cb_limited_hand" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_blindness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blindness"
            app:layout_constraintTop_toBottomOf="@+id/cb_limited_physical" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_low_vision"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/low_vision"
            app:layout_constraintTop_toBottomOf="@id/cb_blindness" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_deafness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deafness"
            app:layout_constraintTop_toBottomOf="@+id/cb_low_vision" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_hard_hearing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard_hearing"
            app:layout_constraintTop_toBottomOf="@id/cb_deafness" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cb_speech_impairment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/speech_impairment"
            app:layout_constraintTop_toBottomOf="@+id/cb_hard_hearing" />

    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/pb_loading"
        style="@style/Widget.Material3.CircularProgressIndicator"
        android:indeterminate="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>